...
"Choosing a library" = "Choosing a library";
"Clear" = "Clear";
"Clear events" = "Clear events";
"Clear events?" = "Clear events?";
"Close feed" = "Close feed";
"Close playback" = "Close playback";
"Close reader" = "Close reader";
"Collection grew to" = "Collection grew to";
"Collection: {0} (+{1} this year)" = "Collection: {0} (+{1} this year)";
"Collections" = "Collections";
"Compact" = "Compact";
"Complete" = "Complete";
"Confirm" = "Confirm";
...
"Pause collection" = "Pause collection";
"Pause playlist" = "Pause playlist";
"Paused" = "Paused";
"People" = "People";
"Play" = "Play";
"Play again" = "Play again";
"Play collection" = "Play collection";
"Play offline" = "Play offline";
"Play playlist" = "Play playlist";
"Playback" = "Playback";
"Playback controls" = "Playback controls";
"Playback could not be restarted: {0}" = "Playback could not be restarted: {0}";
"Playback preferences" = "Playback preferences";
...
